deploy/k8s-deployment-nexadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexadmin-deployment
  labels:
    app: nexadmin-deployment
spec:
  selector:
    matchLabels:
      app: nexadmin-pod
  template:
    metadata:
      labels:
        app: nexadmin-pod
    spec:
      containers:
      - name: nexadmin
        image: harbor.skcc-devops.com/nexbank/nexadmin:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 21611
          name: httpserver
        - containerPort: 21612
          name: admin
