deploy/k8s-deployment-product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-deployment
  labels:
    app: product-service-deployment
spec:
  selector:
    matchLabels:
      app: product-service-pod
  template:
    metadata:
      labels:
        app: product-service-pod
    spec:
      containers:
      - name: product-service-dbless
        image: harbor.skcc-devops.com/nexbank/product-service-dbless:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
