deploy/k8s-service-account.yml
apiVersion: v1
kind: Service
metadata:
  name: account-service # 이 이름은 FeignClient 에서 서비스명 찾는 이름으로 사용됨
spec:
  selector: # deployment 의 spec.selector.matchLabels 의 레이블명  app: account-service
    app: account-service-pod
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  type: ClusterIP
