deploy/k8s-service-nodeport-productservice.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service-nodeport
spec:
  selector: # deployment 의 spec.selector.matchLabels 의 레이블명  app: product-service
    app: product-service-pod
  ports:
    - name: http
      port: 8082
      protocol: TCP
      targetPort: 8082
  type: NodePort
