deploy/k8s-service-product.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service # 이 이름은 FeignClient 에서 서비스명 찾는 이름으로 사용됨
spec:
  selector: # deployment 의 spec.selector.matchLabels 의 레이블명  app: product-service
    app: product-service-pod
  ports:
    - name: http
      port: 8082
      protocol: TCP
      targetPort: 8082
  type: ClusterIP
