deploy/configure-nexbank-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexbank-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: product-service
                port:
                  number: 8082
            path: /prd(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: account-service
                port:
                  number: 8081
            path: /dep(/|$)(.*)
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 172.17.0.2
